# death_checker_cpp

./: .gitignore  CMakeLists.txt  CMakePresets.json  HOW_IT_WORKS.md  README.md  build.bat  build2_out.txt  build_err.txt  build_out.txt  build_out2.txt  ninja_build.bat  ninja_out.txt  output_log.txt  results_death_notices.csv  results_death_notices2.csv  results_largedatasetmaletest_1.csv  results_notices (1).csv  results_notices.csv  results_sample_clients.csv  run_out.txt  sample_clients.csv
